--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ catalogue==2.0.10
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
-chromadb==1.0.20
+chromadb
 click==8.2.1
 cloudpathlib==0.22.0
 coloredlogs==15.0.1
