--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ asyncer==0.0.8
 attrs==25.3.0
 autogen==0.9.9
 autogen-agentchat==0.7.4
-autogen-core==0.7.4
+autogen-core
 autogen-ext==0.7.4
 babel==2.17.0
 backoff==2.2.1
@@ -151,7 +151,7 @@ preshed==3.0.10
 presidio-analyzer==2.2.359
 presidio-anonymizer==2.2.359
 propcache==0.3.2
-protobuf==5.29.5
+protobuf
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
