--- a/requirements.txt
+++ b/requirements.txt
@@ -58,11 +58,11 @@ gitdb==4.0.12
 gitpython==3.1.45
 google-auth==2.40.3
 google-genai==1.32.0
-googleapis-common-protos==1.70.0
+googleapis-common-protos
 greenlet==3.2.4
 griffe==1.13.0
 grpcio==1.74.0
-grpcio-tools==1.74.0
+grpcio-tools
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
