--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,7 @@ murmurhash==1.0.13
 mypy-extensions==1.1.0
 narwhals==2.3.0
 networkx==3.4.2
-numpy==1.26.4
+numpy
 oauthlib==3.3.1
 ollama==0.5.3
 onnxruntime==1.22.0
