--- a/requirements.txt
+++ b/requirements.txt
@@ -1,247 +1,247 @@
-ag2==0.9.9
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-alabaster==0.7.16
-altair==5.5.0
-annotated-types==0.7.0
-anthropic==0.65.0
-anyio==4.10.0
-appdirs==1.4.4
-async-timeout==4.0.3
-asyncer==0.0.8
-attrs==25.3.0
-autogen==0.9.9
-autogen-agentchat==0.7.4
+ag2
+aiohappyeyeballs
+aiohttp
+aiosignal
+alabaster
+altair
+annotated-types
+anthropic
+anyio
+appdirs
+async-timeout
+asyncer
+attrs
+autogen
+autogen-agentchat
 autogen-core
-autogen-ext==0.7.4
-babel==2.17.0
-backoff==2.2.1
-backports-asyncio-runner==1.2.0
-bcrypt==4.3.0
-black==25.1.0
-blinker==1.9.0
-blis==1.3.0
-blurb==2.0.0
-boto3==1.40.22
-botocore==1.40.22
-build==1.3.0
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
+autogen-ext
+babel
+backoff
+backports-asyncio-runner
+bcrypt
+black
+blinker
+blis
+blurb
+boto3
+botocore
+build
+cachetools
+catalogue
+certifi
+cffi
+charset-normalizer
 chromadb
-click==8.2.1
-cloudpathlib==0.22.0
-coloredlogs==15.0.1
-confection==0.1.5
-crewai==0.175.0
-cryptography==44.0.3
-cymem==2.0.11
-dataclasses-json==0.6.7
-deepeval==3.4.3
-diskcache==5.6.3
-distro==1.9.0
-docker==7.1.0
-docstring-parser==0.17.0
-docutils==0.22
-durationpy==0.10
-et-xmlfile==2.0.0
-execnet==2.1.1
-faiss-cpu==1.12.0
-filelock==3.19.1
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.9.0
-gitdb==4.0.12
-gitpython==3.1.45
-google-auth==2.40.3
-google-genai==1.32.0
+click
+cloudpathlib
+coloredlogs
+confection
+crewai
+cryptography
+cymem
+dataclasses-json
+deepeval
+diskcache
+distro
+docker
+docstring-parser
+docutils
+durationpy
+et-xmlfile
+execnet
+faiss-cpu
+filelock
+flatbuffers
+frozenlist
+fsspec
+gitdb
+gitpython
+google-auth
+google-genai
 googleapis-common-protos
-greenlet==3.2.4
-griffe==1.13.0
-grpcio==1.74.0
+greenlet
+griffe
+grpcio
 grpcio-tools
-h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
-html2text==2025.4.15
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.4
-humanfriendly==10.0
-hyperframe==6.1.0
-idna==3.10
-imagesize==1.4.1
-importlib-resources==6.5.2
-iniconfig==2.1.0
-instructor==1.11.2
-jinja2==3.1.6
-jiter==0.10.0
-jmespath==1.0.1
-json-repair==0.25.2
-json5==0.12.1
-jsonpatch==1.33
-jsonpickle==4.1.1
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.4.1
-kubernetes==33.1.0
-langchain==0.3.27
-langchain-aws==0.2.31
-langchain-community==0.3.29
-langchain-core==0.3.75
-langchain-openai==0.3.32
-langchain-text-splitters==0.3.11
-langcodes==3.5.0
-langgraph==0.6.6
-langgraph-checkpoint==2.1.1
-langgraph-prebuilt==0.6.4
-langgraph-sdk==0.2.5
-langsmith==0.4.23
-language-data==1.3.0
-litellm==1.74.9
-lxml==6.0.1
-marisa-trie==1.3.1
-markdown-it-py==4.0.0
-markupsafe==3.0.2
-marshmallow==3.26.1
-mcp==1.13.1
-mdurl==0.1.2
-mem0ai==0.1.116
-mmh3==5.2.0
-mpmath==1.3.0
-multidict==6.6.4
-murmurhash==1.0.13
-mypy-extensions==1.1.0
-narwhals==2.3.0
-networkx==3.4.2
+h11
+h2
+hpack
+html2text
+httpcore
+httptools
+httpx
+httpx-sse
+huggingface-hub
+humanfriendly
+hyperframe
+idna
+imagesize
+importlib-resources
+iniconfig
+instructor
+jinja2
+jiter
+jmespath
+json-repair
+json5
+jsonpatch
+jsonpickle
+jsonpointer
+jsonref
+jsonschema
+jsonschema-specifications
+kubernetes
+langchain
+langchain-aws
+langchain-community
+langchain-core
+langchain-openai
+langchain-text-splitters
+langcodes
+langgraph
+langgraph-checkpoint
+langgraph-prebuilt
+langgraph-sdk
+langsmith
+language-data
+litellm
+lxml
+marisa-trie
+markdown-it-py
+markupsafe
+marshmallow
+mcp
+mdurl
+mem0ai
+mmh3
+mpmath
+multidict
+murmurhash
+mypy-extensions
+narwhals
+networkx
 numpy
-oauthlib==3.3.1
-ollama==0.5.3
-onnxruntime==1.22.0
-openai==1.104.2
-openai-agents==0.2.10
-openpyxl==3.1.5
-opentelemetry-api==1.36.0
-opentelemetry-exporter-otlp-proto-common==1.36.0
-opentelemetry-exporter-otlp-proto-grpc==1.36.0
-opentelemetry-exporter-otlp-proto-http==1.36.0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
-orjson==3.11.3
-ormsgpack==1.10.0
-overrides==7.7.0
-pandas==2.3.2
-pathspec==0.12.1
-pdfminer-six==20250506
-pdfplumber==0.11.7
-phonenumbers==9.0.13
-pillow==11.3.0
-plotly==6.3.0
-pluggy==1.6.0
-portalocker==2.7.0
+oauthlib
+ollama
+onnxruntime
+openai
+openai-agents
+openpyxl
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-http
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+orjson
+ormsgpack
+overrides
+pandas
+pathspec
+pdfminer-six
+pdfplumber
+phonenumbers
+pillow
+plotly
+pluggy
+portalocker
 posthog
-preshed==3.0.10
-presidio-analyzer==2.2.359
-presidio-anonymizer==2.2.359
-propcache==0.3.2
+preshed
+presidio-analyzer
+presidio-anonymizer
+propcache
 protobuf
-pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
-pybase64==1.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic-core==2.33.2
-pydantic-settings==2.10.1
-pydeck==0.9.1
-pyfiglet==1.0.4
-pyjwt==2.10.1
-pypdf==6.0.0
-pypdf2==3.0.1
-pypdfium2==4.30.0
-pypika==0.48.9
-pyproject-hooks==1.2.0
-pyreadline3==3.5.4
-pytesseract==0.3.13
-pytest==8.4.1
-pytest-asyncio==1.1.0
-pytest-repeat==0.9.4
-pytest-rerunfailures==12.0
-pytest-xdist==3.8.0
-python-docs-theme==2024.12
-python-docx==1.2.0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytz==2025.2
-pyvis==0.3.2
-pyyaml==6.0.2
-qdrant-client==1.15.1
-referencing==0.36.2
-regex==2025.9.1
-requests==2.32.5
-requests-file==2.1.0
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.1.0
-rpds-py==0.27.1
-rsa==4.9.1
-s3transfer==0.13.1
-sec-api==1.0.32
-sentry-sdk==2.35.2
-shellingham==1.5.4
-smart-open==7.3.0.post1
-smmap==5.0.2
-sniffio==1.3.1
-snowballstemmer==3.0.1
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-sphinx==2.4.4
-sphinxcontrib-applehelp==2.0.0
-sphinxcontrib-devhelp==2.0.0
-sphinxcontrib-htmlhelp==2.1.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==2.0.0
-sphinxcontrib-serializinghtml==2.0.0
-sqlalchemy==2.0.43
-srsly==2.5.1
-sse-starlette==3.0.2
-starlette==0.47.3
-streamlit==1.49.1
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==9.1.2
-termcolor==3.1.0
-thinc==8.3.6
-tiktoken==0.11.0
-tldextract==5.3.0
-tokenizers==0.22.0
-toml==0.10.2
-tomli==2.2.1
-tomli-w==1.2.0
-tqdm==4.67.1
-typer==0.17.3
-types-requests==2.32.4.20250809
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-tzdata==2025.2
-urllib3==2.5.0
-uv==0.8.14
-uvicorn==0.35.0
-wasabi==1.1.3
-watchdog==6.0.0
-watchfiles==1.1.0
-weasel==0.4.1
-websocket-client==1.8.0
-websockets==15.0.1
-wrapt==1.17.3
-xxhash==3.5.0
-yarl==1.20.1
-zstandard==0.24.0
+pyarrow
+pyasn1
+pyasn1-modules
+pybase64
+pycparser
+pydantic
+pydantic-core
+pydantic-settings
+pydeck
+pyfiglet
+pyjwt
+pypdf
+pypdf2
+pypdfium2
+pypika
+pyproject-hooks
+pyreadline3
+pytesseract
+pytest
+pytest-asyncio
+pytest-repeat
+pytest-rerunfailures
+pytest-xdist
+python-docs-theme
+python-docx
+python-dotenv
+python-multipart
+pytz
+pyvis
+pyyaml
+qdrant-client
+referencing
+regex
+requests
+requests-file
+requests-oauthlib
+requests-toolbelt
+rich
+rpds-py
+rsa
+s3transfer
+sec-api
+sentry-sdk
+shellingham
+smart-open
+smmap
+sniffio
+snowballstemmer
+spacy
+spacy-legacy
+spacy-loggers
+sphinx
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+sqlalchemy
+srsly
+sse-starlette
+starlette
+streamlit
+sympy
+tabulate
+tenacity
+termcolor
+thinc
+tiktoken
+tldextract
+tokenizers
+toml
+tomli
+tomli-w
+tqdm
+typer
+types-requests
+typing-inspect
+typing-inspection
+tzdata
+urllib3
+uv
+uvicorn
+wasabi
+watchdog
+watchfiles
+weasel
+websocket-client
+websockets
+wrapt
+xxhash
+yarl
+zstandard
